--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,4 @@
-# empty
-
-one: {}
-# column: value
-#
-two: {}
-# column: value
+michael:
+  name: Michael Example
+  email: michael@example.com  
+  password_digest: <%= User.digest('password') %>
